--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -402,7 +402,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -596,7 +596,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -738,7 +738,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -871,7 +871,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -1002,7 +1002,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -1150,7 +1150,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -1289,7 +1289,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -1452,7 +1452,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -1610,7 +1610,7 @@
     <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
       <meta itemprop="name" content="fantaotao">
       <meta itemprop="description" content="">
-      <meta itemprop="image" content="/images/person.PNG">
+      <meta itemprop="image" content="/images/person1.PNG">
     </span>
 
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
@@ -1780,7 +1780,7 @@
       <section class="site-overview sidebar-panel sidebar-panel-active">
         <div class="site-author motion-element" itemprop="author" itemscope itemtype="http://schema.org/Person">
           <img class="site-author-image" itemprop="image"
-               src="/images/person.PNG"
+               src="/images/person1.PNG"
                alt="fantaotao" />
           <p class="site-author-name" itemprop="name">fantaotao</p>
            
